# sudoku-solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  output.txt  sudoku_easy.txt  sudoku_hard.txt  sudoku_manysolutions.txt  sudoku_medium.txt  sudoku_wrong.txt
src/: main.cpp
